--- a/weatherforecast-steeltoe/catalog/catalog-info.yaml
+++ b/weatherforecast-steeltoe/catalog/catalog-info.yaml
@@ -10,6 +10,10 @@ metadata:
     - web
     - tanzu
     - ruben-dillon
+  links:
+    - url: https://www.youtube.com/rubendillon
+      title: Ruben Dillon YouTube Channel
+      icon: dashboard
   annotations:
     "backstage.io/kubernetes-label-selector": "app.kubernetes.io/part-of=weatherforecast-steeltoe"
 spec:
