--- a/tanzu-java-web-app/config/workload.yaml
+++ b/tanzu-java-web-app/config/workload.yaml
@@ -13,6 +13,10 @@ spec:
       - name: BP_JVM_VERSION
         value: "11"
   params:
+     - name: gitops_repository_owner
+       value: RubenDillon
+     - name: gitops_repository_name
+       value: tap-gitops
   - name: annotations
     value:
       autoscaling.knative.dev/minScale: "1"
